# rscrape

./: .editorconfig  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  TEST_DOCUMENTATION.md  pyproject.toml  test_webscrape.py  webscrape.py  webscrape_ct.py  webscrape_old.py
